dyanmically remove authors/couses, ui changes to user_accounts + books, searches + books controllers merged

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -27,6 +27,7 @@ en:
         courses: "Book"
       post:
         price: "Price"
+        description: "Description"
       book_courses/course:
         course_number: "Course number"
         department: "Department"
